--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,9 @@
 --lexend-subtitle-light: 0.83rem;
 --lexend-body-light: 1rem;
 }
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
