--- a/components/ProgressBar/ProgressBar.module.css
+++ b/components/ProgressBar/ProgressBar.module.css
@@ -1,8 +1,8 @@
 .progressBG {
-    width: 140%;
+    width: 100%;
     background-color: #e0e0e0;
-    margin-left: -50px;
     border-radius: 40px;
+    margin: 0 auto;
 }
 
 .progressInner {
