created sign in and search

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,67 @@
+@font-face {
+  font-family: 'Lexend';
+  src: url('/fonts/Lexend-Light.ttf');
+}
+
+@font-face {
+  font-family: 'PP Monument Extended Regular';
+  src: url('/fonts/PPMonumentExtended-Regular.otf');
+}
+
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  min-height: 100vh;
+  background-color: var(--background-black);
+  width: 430px;
+  height: 932px;
+}
+
+.grooveHeader {
+  display: flex;
+  font-size: 4rem;
+  color: var(--groovy-white);
+  font-family: 'PP Monument Extended Regular', Arial, Helvetica, sans-serif;
+}
+
+.headerContainer {
+  display: flex;
+  height: 200px;
+  align-items: center;
+}
+
+.spotifyButton {
+  display: flex;
+  font-family: 'Lexend', Arial, Helvetica, sans-serif;
+  color: var(--background-black);
+  text-decoration: none;
+  font-size: var(--lexend-body);
+  background-color: #1ed760;
+  cursor: pointer;
+  width: 243px;
+  height: 48px;
+  border-radius: 50px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.spotifybuttonContainer {
+  background-color: #1ed760;
+  cursor: pointer;
+  width: 243px;
+  height: 48px;
+  border-radius: 50px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttonContainer {
+  display: flex;
+  height: 700px;
+  align-items: center;
 }
