--- a/styles/NewReview.module.css
+++ b/styles/NewReview.module.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Lexend';
-    src: url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+    src: url('/fonts/Lexend-Light.ttf');
 }
 
 @font-face {
@@ -12,7 +12,7 @@
 .albumGrid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
+    grid-gap: 8px;
     }
 
 .albumItem {
@@ -56,17 +56,12 @@
     background: rgba(63, 63, 64, 0.25);
 }
 
-.textContainer:hover {
-    background: rgba(63, 63, 64, 0.25);
-}
-
 .searchBar {
     display: flex;
     width: 395px;
     height: 45px;
     padding: 16px 10px;
     align-items: center;
-    gap: 137px;
     border-radius: 10px;
     background-color: #363739;
     color: #7D7E80;
