--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'Lexend';
   src: url('/fonts/Lexend-Light.ttf');
@@ -7,6 +6,11 @@
 @font-face {
   font-family: 'PP Monument Extended Regular';
   src: url('/fonts/PPMonumentExtended-Regular.otf');
+}
+
+@font-face {
+  font-family: 'Lexend Bold';
+  src: url('public/fonts/Lexend-SemiBold.ttf');
 }
 
 .main {
@@ -34,7 +38,7 @@
 
 .spotifyButton {
   display: flex;
-  font-family: 'Lexend', Arial, Helvetica, sans-serif;
+  font-family: 'Lexend Bold' , Arial, Helvetica, sans-serif;
   color: var(--background-black);
   text-decoration: none;
   font-size: var(--lexend-body);
