fix font import

--- a/styles/NewReview.module.css
+++ b/styles/NewReview.module.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: 'Lexend Bold';
-    src: url('public/fonts/Lexend-SemiBold.ttf');
+    src: url('/fonts/Lexend-SemiBold.ttf');
 }
 
 
