--- a/styles/ChildOne.module.css
+++ b/styles/ChildOne.module.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: 'Lexend';
+    src: url('/fonts/Lexend-Light.ttf');
+  }
+  
+  @font-face {
+    font-family: 'PP Monument Extended Light';
+    src: url('/fonts/PPMonumentExtended-Light.otf');
+  }
+  
+  @font-face {
+    font-family: 'Lexend Semibold';
+    src: url('/fonts/Lexend-SemiBold.ttf');
+  }
+
 .parentContainer {
     background: #000;
     color: #fff;
@@ -5,15 +20,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    font-family: 'Arial', sans-serif;
     position: static;
+    min-height: 678px;
 }
 
 .answersContainer {
     display: flex;
     flex-direction: column;
-    margin-top: -400px;
 }
 
 .answerButton {
@@ -74,4 +87,9 @@
     margin: 20px 0;
     font-family: 'Lexend';
     position: static;
+    margin-top: 10px;
+}
+
+.navBar {
+    position: relative;
 }
