--- a/styles/ChildTwo.module.css
+++ b/styles/ChildTwo.module.css
@@ -1,12 +1,30 @@
+@font-face {
+    font-family: 'Lexend';
+    src: url('/fonts/Lexend-Light.ttf');
+  }
+  
+  @font-face {
+    font-family: 'PP Monument Extended Light';
+    src: url('/fonts/PPMonumentExtended-Light.otf');
+  }
+  
+  @font-face {
+    font-family: 'Lexend Semibold';
+    src: url('/fonts/Lexend-SemiBold.ttf');
+  }
+
 .result {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Lexend';
+    color: white;
 }
 
 .result h3 {
     text-align: center;
     margin-bottom: -145px;
+    margin-top: -30px;
 }
 
 .result>:nth-child(2) {
