--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -34,4 +34,5 @@
     font-size: var(--lexend-body);
     font-family: 'Lexend', Arial, Helvetica, sans-serif;
     color: var(--groovy-white) ;
+    padding: 10px;
 }
