--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -42,3 +42,17 @@
     height: 400px;
     font-family: 'Lexend', Arial, Helvetica, sans-serif;
 }
+
+.buttonContainer {
+    font-family: 'Lexend Bold' , Arial, Helvetica, sans-serif;
+    font-size: var(--lexend-body);
+    color: var(--groovy-white);
+    width: 158px;
+    height: 45px;
+    top: 818px;
+    left: 134px;
+    padding: 13px 22px 12px 20px;
+    gap: 8px;
+    border-radius: 29.5px;
+    border: 3px;
+}
