--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -46,6 +46,7 @@
 .buttonContainer {
     font-family: 'Lexend Bold' , Arial, Helvetica, sans-serif;
     font-size: var(--lexend-body);
+    background-color: var(--button-gray);
     color: var(--groovy-white);
     width: 158px;
     height: 45px;
