--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -55,5 +55,10 @@
     padding: 13px 22px 12px 20px;
     gap: 8px;
     border-radius: 29.5px;
-    border: 3px;
+    border: 3px solid var(--groovy-white);
+    margin-top: 150px;
+}
+
+.buttonContainer:hover {
+    border: 3px solid var(--groovy-purple);
 }
