--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 :root {
 /* COLOR STYLES */
 --groovy-purple: rgba(158, 128, 241, 1);
+--groovy-purple-light: #C8BAF8;
 --groovy-red: rgba(220, 119, 85, 1);
 --groovy-yellow: rgba(246, 198, 92, 1);
 --groovy-black: rgba(0, 0, 0, 1);
