--- a/styles/ChildOne.module.css
+++ b/styles/ChildOne.module.css
@@ -14,8 +14,8 @@
   }
 
 .parentContainer {
-    background: #000;
-    color: #fff;
+    background: var(--groovy-black);
+    color: var(--groovy-white);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,7 +30,7 @@
 }
 
 .answerButton {
-    background: #242527;
+    background: var(--background-black);
     border: solid 4px white;
     color: white;
     padding: 14px 52px 13px 51px;
@@ -41,23 +41,23 @@
 }
 
 .answerButton:active {
-    background: #D4C4FF;
-    border: solid 4px #D4C4FF;
-    color:#000000;
+    background: var(--groovy-purple);
+    border: solid 4px var(--groovy-purple);
+    color: var(--groovy-black);
 
 }
 
 .answerButton:focus {
-    background: #D4C4FF;
-    border:solid 4px #D4C4FF;
-    color: #000000;
+    background: var(--groovy-purple-light);
+    border:solid 4px var(--groovy-purple);
+    color: var(--groovy-black);
     font-family: 'Lexend Semibold';
 }
 
 .submitButton:focus {
-    background: #D4C4FF;
-    border: solid 4px #D4C4FF;
-    color:#000000;
+    background: var(--groovy-purple-light);
+    border: solid 4px var(--groovy-purple);
+    color:var(--groovy-black);
 }
 
 .navContainer {
@@ -70,14 +70,14 @@
 }
 
 .submitButton:active {
-    background-color: #D4C4FF;
-    border: solid 4px #D4C4FF;
+    background-color: var(--groovy-purple);
+    border: solid 4px var(--groovy-purple);
 }
 
 .submitButton {
     background: #0E0F11;
-    color: white;
-    border: solid 4px #9e80f1;
+    color: var(--groovy-white);
+    border: solid 4px var(--groovy-purple);
     padding: 5px 16px;
     border-radius: 12px;
 }
