--- a/styles/ChildOne.module.css
+++ b/styles/ChildOne.module.css
@@ -49,7 +49,7 @@
 
 .answerButton:focus {
     background: var(--groovy-purple-light);
-    border:solid 4px var(--groovy-purple);
+    border:solid 4px var(--groovy-purple-light);
     color: var(--groovy-black);
     font-family: 'Lexend Semibold';
 }
