--- a/styles/review.module.css
+++ b/styles/review.module.css
@@ -62,8 +62,8 @@
     height: 378px;
 }
 
-.backButton {
+.backbuttonContainer {
+    width: 405px;
     margin-top: 67px;
     margin-left: 12px;
-    width: 405px;
 }
