--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -61,3 +61,9 @@
 .buttonContainer:hover {
     border: 3px solid var(--groovy-purple);
 }
+
+.backbuttonContainer {
+    width: 405px;
+    margin-top: 67px;
+    margin-left: 12px;
+}
