--- a/components/Postcard/Postcard.module.css
+++ b/components/Postcard/Postcard.module.css
@@ -1,164 +1,150 @@
-.post-card {
-    background-image: url(./rectangle-26.svg);
-    background-size: 100% 100%;
-    height: 241px;
-    position: relative;
-    width: 375px;
-  }
+@font-face {
+  font-family: 'Lexend';
+  src: url('/fonts/Lexend-Light.ttf');
+}
+
+@font-face {
+  font-family: 'PP Monument Extended Light';
+  src: url('/fonts/PPMonumentExtended-Light.otf');
+}
+
+@font-face {
+  font-family: 'Lexend Semibold';
+  src: url('/fonts/Lexend-SemiBold.ttf');
+}
+
+
+.container {
+  width: 406px;
+  height: 241px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+  margin-bottom: 16px;
+  padding-top: 20px;
+}
+
+.albumCoverBG {
+  width: 361.332px;
+  height: 62px;
+  background: rgba(112, 112, 112, 0.50);
+  border-radius: 6px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 8px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+
+.albumCover {
+  height: 51px;
+  width: 54px;
+  border-radius: 6px;
+}
+
+.albumInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 120px;
+}
+
+.albumInfo p{
+  font-family: 'Lexend';
+  font-size: 11px;
+  color: var(--groovy-white, #FFF); 
+}
+
+.albumName {
+  font-family: 'Lexend Semibold';
+  font-size: 12px;
+  color: var(--groovy-white, #FFF);
+}
+
+.reviewContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  text-align: left;
+  width: 363px;
+  height: 87px;
+  row-gap: 2px;
+
+}
+
+.reviewTitle {
+  width: 360px;
+  height: 15px;
+  font-family: 'Lexend Semibold';
+  font-size: 13px;
+  color: var(--groovy-white, #FFF);
   
-  .post-card .music-card-instance {
-    left: 15px !important;
-    position: absolute !important;
-    top: 13px !important;
-  }
+}
+
+.stars {
+  width: 84px;
+  height: 13px;
+  padding-right: 18px;
+}
+
+.review {
+  width: 360px;
+  height: 44px;
+  font-family: 'Lexend';
+  font-size: 12px;
+  color: #fff;
+}
+
+.read {
+  font-family: 'Lexend';
+  font-size: 12px;
+  opacity: 41%;
+  color: #D9D9D9;
+}
+
+.actions {
+  height: 40px;
+  width: 360px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 75px;
+  margin-top: 6px;
+}
+
+.userProfile {
+  height: 31px;
+  width: 31px;
+  border-radius: 31px;
   
-  .post-card .overlap {
-    height: 39px;
-    left: 15px;
-    position: absolute;
-    top: 83px;
-    width: 285px;
-  }
-  
-  .post-card .text-wrapper-2 {
-    color: #ffffff;
-    font-family: "Lexend-SemiBold", Helvetica;
-    font-size: 12.8px;
-    font-weight: 600;
-    left: 0;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 0;
-    width: 285px;
-  }
-  
-  .post-card .group {
-    height: 14px;
-    left: 0;
-    position: absolute;
-    top: 25px;
-    width: 75px;
-  }
-  
-  .post-card .vector {
-    height: 13px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 13px;
-  }
-  
-  .post-card .img {
-    height: 13px;
-    left: 15px;
-    position: absolute;
-    top: 0;
-    width: 13px;
-  }
-  
-  .post-card .vector-2 {
-    height: 13px;
-    left: 31px;
-    position: absolute;
-    top: 0;
-    width: 13px;
-  }
-  
-  .post-card .vector-3 {
-    height: 13px;
-    left: 46px;
-    position: absolute;
-    top: 0;
-    width: 13px;
-  }
-  
-  .post-card .overlap-group {
-    background-image: url(./vector-4.svg);
-    background-size: 100% 100%;
-    height: 13px;
-    left: 63px;
-    position: absolute;
-    top: 0;
-    width: 13px;
-  }
-  
-  .post-card .subtract {
-    height: 14px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 7px;
-  }
-  
-  .post-card .text-wrapper-3 {
-    color: #ffffff;
-    font-family: "Lexend-Light", Helvetica;
-    font-size: 11.7px;
-    font-weight: 300;
-    left: 16px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 134px;
-    width: 343px;
-  }
-  
-  .post-card .text-wrapper-4 {
-    color: #8b8b8b;
-    font-family: "Lexend-Regular", Helvetica;
-    font-size: 10.6px;
-    font-weight: 400;
-    left: 16px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 180px;
-  }
-  
-  .post-card .text-wrapper-5 {
-    color: #ffffff;
-    font-family: "Lexend-SemiBold", Helvetica;
-    font-size: 11.7px;
-    font-weight: 600;
-    left: 55px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 206px;
-  }
-  
-  .post-card .text-wrapper-6 {
-    color: #ffffff;
-    font-family: "Lexend-Regular", Helvetica;
-    font-size: 10.6px;
-    font-weight: 400;
-    left: 208px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 206px;
-  }
-  
-  .post-card .profile-instance {
-    height: 29px !important;
-    left: 19px !important;
-    position: absolute !important;
-    top: 199px !important;
-    width: 29px !important;
-  }
-  
-  .post-card .heart-instance {
-    background-image: url(./union-5.svg) !important;
-    left: 309px !important;
-    position: absolute !important;
-    top: 204px !important;
-  }
-  
-  .post-card .comment-button-instance {
-    left: 339px !important;
-    position: absolute !important;
-    top: 204px !important;
-  }
-  
+}
+
+.user {
+  height: 30px;
+  width: 123px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  column-gap: 9px;
+  font-family: 'Lexend Semibold';
+  font-size: 12px;
+  color: #fff;
+}
+
+.likesReplies {
+  height: 30px;
+  width: 158px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+  column-gap: 10px;
+  font-family: 'Lexend';
+  font-size: 11px;
+  color: #fff;
+}
+
