--- a/components/PostForm/PostForm.module.css
+++ b/components/PostForm/PostForm.module.css
@@ -105,3 +105,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+.stars {
+    width: 35px;
+    height: 35px;
+    padding: 0px;
+}
