--- a/styles/ChildTwo.module.css
+++ b/styles/ChildTwo.module.css
@@ -36,9 +36,29 @@
 .test {
     border: 2px white solid;
     border-radius: 35px;
-    height: 400px;
+    height: 420px;
     width: 360px;
     margin-top: 40px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.character {
+    transform: translate(-50%, -50%);
+    top: 60%;
+    left: 50%; 
+    position: absolute;
+}
+
+.logo {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -65%);
+    position: absolute;
+    z-index: -3;
+    filter: blur(5px);
 }
 
 .spotify {
