--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -41,6 +41,11 @@
     width: 400px;
     height: 400px;
     font-family: 'Lexend', Arial, Helvetica, sans-serif;
+    border: 1px solid white;
+    border-radius: 20px;
+    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .buttonContainer {
@@ -53,7 +58,7 @@
     padding: 13px 22px 12px 20px;
     border-radius: 29.5px;
     border: 3px solid var(--groovy-white);
-    margin-top: 150px;
+    margin-top: 50px;
     text-align: center;
     text-decoration: none;
 }
