--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -27,6 +27,7 @@
     color: var(--groovy-white);
     font-family: 'Lexend', Arial, Helvetica, sans-serif;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .paragraph {
@@ -35,6 +36,7 @@
     color: var(--groovy-white) ;
     padding: 10px;
     width: 405px;
+    margin-top: 10px;
 }
 
 .chartCanvas {
@@ -43,9 +45,10 @@
     font-family: 'Lexend', Arial, Helvetica, sans-serif;
     border: 1px solid white;
     border-radius: 20px;
-    padding: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom : 40px;
+    padding-top: 40px;
 }
 
 .buttonContainer {
