--- a/styles/Explore.module.css
+++ b/styles/Explore.module.css
@@ -1,9 +1,32 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    min-height: 100vh; 
-    background: var(--background-black); 
-    color: var(--text-white);
-  }
+  background: var(--background-black);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: static;
+  min-height: 766px;
+}
+
+.scroll {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 857px;
+}
+
+.scroll::-webkit-scrollbar {
+  width: 5px !important;
+}
   
+.scroll::-webkit-scrollbar-track {
+  background: var(--background-black) !important;
+}
+  
+.scroll::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+ 
+.scroll:hover::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
