--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -40,15 +40,7 @@
 }
 
 .chartCanvas {
-    width: 400px;
-    height: 400px;
     font-family: 'Lexend', Arial, Helvetica, sans-serif;
-    border: 1px solid white;
-    border-radius: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom : 40px;
-    padding-top: 40px;
 }
 
 .buttonContainer {
@@ -75,4 +67,13 @@
     margin-top: 67px;
     margin-left: 12px;
     margin-bottom: 120px;
+}
+
+
+.canvasContainer {
+    width: 400px;
+    height: 400px;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    padding: 40px 20px; 
 }
