--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -66,7 +66,7 @@
     width: 405px;
     margin-top: 67px;
     margin-left: 12px;
-    margin-bottom: 120px;
+    margin-bottom: 70px;
 }
 
 
@@ -75,5 +75,7 @@
     height: 400px;
     border: 1px solid #fff;
     border-radius: 20px;
-    padding: 40px 20px; 
+    padding: 40px 20px;
+    display: flex;
+    justify-content: center;
 }
