--- a/styles/Chart.module.css
+++ b/styles/Chart.module.css
@@ -54,6 +54,7 @@
     border-radius: 29.5px;
     border: 3px solid var(--groovy-white);
     margin-top: 50px;
+    margin-bottom: 50px;
     text-align: center;
     text-decoration: none;
 }
@@ -71,11 +72,12 @@
 
 
 .canvasContainer {
-    width: 400px;
-    height: 400px;
+    width: 380px;
+    height: 450px;
     border: 1px solid #fff;
     border-radius: 20px;
     padding: 40px 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
