--- a/styles/NewReview.module.css
+++ b/styles/NewReview.module.css
@@ -82,7 +82,7 @@
 .searchIcon {
     position:absolute;
     display:inline-block;
-    top: 40px;
+    top: 134px;
     margin-left: 10px;
     width: 20px;
     background-color: #363739;
@@ -98,4 +98,10 @@
     font-weight: 400;
     font-size: var(--lexend-body);
     padding: 280px;
+}
+
+.backbuttonContainer {
+    width: 405px;
+    margin-top: 37px;
+    margin-bottom: 37px;;
 }
