made the onboarding

--- a/styles/Quiz.module.css
+++ b/styles/Quiz.module.css
@@ -18,6 +18,7 @@
     width: 430px;
     margin: 0 auto;
     background-size: cover;
+    border: solid red 2px;
 }
 
 .parentContainer {
@@ -65,6 +66,7 @@
     text-align: left;
     width: 300px;
     color: white;
+    border: solid blue 2px;
 }
 
 .text {
