--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   align-items: center;
   padding: 6rem;
+  width: 430px;
   background-color: var(--background-black);
 }
 
