--- a/components/ProgressBar/ProgressBar.module.css
+++ b/components/ProgressBar/ProgressBar.module.css
@@ -9,5 +9,5 @@
     height: 10px;
     background: #9e80f1;
     transition: width 0.3s ease-in-out;
-    border-radius: 40px;
+    border-radius: 40px
 }
