--- a/styles/ChildOne.module.css
+++ b/styles/ChildOne.module.css
@@ -21,13 +21,16 @@
     align-items: center;
     justify-content: center;
     position: static;
-    min-height: 678px;
 }
 
 .answersContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    height: 80vh;
+    width: 430px;
 }
+
 
 .answerButton {
     background: var(--background-black);
@@ -63,10 +66,9 @@
 .navContainer {
     display: flex;
     justify-content: space-between;
-    width: 100%;
     padding: 20px;
     margin-top: 60px;
-    width: 350px;
+    width: 380px;
 }
 
 .submitButton:active {
@@ -84,12 +86,13 @@
 
 .question {
     text-align: center;
-    margin: 20px 0;
     font-family: 'Lexend';
-    position: static;
-    margin-top: 10px;
+    margin-top: 80px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .navBar {
-    position: relative;
+    position: fixed;
+    bottom: 0;
 }
