--- a/styles/Explore.module.css
+++ b/styles/Explore.module.css
@@ -31,13 +31,14 @@
 }
 
 .scroll {
+  height: 100vh;
   overflow-y: scroll;
   overflow-x: hidden;
-  height: 855px;
 }
 
 .scroll::-webkit-scrollbar {
-  width: 5px !important;
+  width: 4px !important;
+  height: 20px;
 }
   
 .scroll::-webkit-scrollbar-track {
@@ -50,6 +51,7 @@
  
 .scroll:hover::-webkit-scrollbar-thumb {
   background-color: #888;
+  border-radius: 10px !important;
 }
 
 .groove h1 {
@@ -60,8 +62,26 @@
 }
 
 .groove {
+  background: var(--background-black);
   border: solid var(--background-black) 2px;
+  width: 430px;
+  padding-left: 30px;
+}
+
+.nav {
+  position: fixed;
+  bottom: 0;
+}
+
+.feed {
+  font-family: 'Lexend';
+  font-size: 23px;
+  color: #9166EC;
+  margin-top: 20px;
+  padding-left: 20px;
   display: flex;
-  width: 428px;
-  margin-right: -3px;
+  flex-wrap: wrap;
+  gap: 10px;
+  width: 430px;
+  margin-bottom: 40px;
 }
