--- a/styles/Quiz.module.css
+++ b/styles/Quiz.module.css
@@ -13,7 +13,7 @@
     src: url('/fonts/Lexend-SemiBold.ttf');
 }
 
-.mainContainer {
+  .mainContainer {
     background: var(--background-black);
     width: 430px;
     margin: 0 auto;
@@ -28,7 +28,7 @@
     align-items: center;
     justify-content: center;
     position: static;
-    min-height: 766px;
+    height: 100vh;
 }
 
 .groove h1 {
@@ -41,6 +41,10 @@
 .groove {
     background: var(--background-black);
     border: solid var(--background-black) 2px;
+    width: 430px;
+    padding-left: 30px;
+    position: fixed;
+    top: 0;
 }
 
 .header {
@@ -51,6 +55,7 @@
 .logo {
     margin-top: 50px;
 }
+
 
 .welcome {
     font-family: 'PP Monument Extended Light', 'PP Monument Extended Light';
@@ -78,9 +83,10 @@
     padding: 5px 16px;
     border-radius: 12px;
     margin-top: 20px;
-    ;
 }
 
 .navBar {
-    position: relative;
+    position: fixed;
+    bottom: 0;
+
 }
