--- a/styles/onboarding3.module.css
+++ b/styles/onboarding3.module.css
@@ -27,7 +27,7 @@
 
 .secondContainer {
     width: 430px;
-    height: 932px;
+    height: 100vh;
     background: #997527;
     display: flex;
     flex-direction: column;
