--- a/styles/onboarding4.module.css
+++ b/styles/onboarding4.module.css
@@ -32,7 +32,7 @@
 
 .secondContainer {
     width: 430px;
-    height: 932px;
+    height: 100vh;
     background: #202020;;
     display: flex;
     flex-direction: column;
