--- a/styles/onboarding4.module.css
+++ b/styles/onboarding4.module.css
@@ -97,7 +97,7 @@
 .blackBG {
     width: 430px;
     height: 343px;
-    background: black;
+    background: var(--background-black);
     color: #fff;
     margin-top: auto;
     z-index: 3;
