--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -21,11 +21,22 @@
     height: 932px;
 }
 
+.parentContainer {
+    height: 100vh;
+    width: 430px;
+}
+
 .grooveLogo {
     font-family: 'PP Monument Extended Regular';
     color: var(--groovy-white);
     font-size: 40px;
     margin-top: 54px;
+}
+
+.profileimagePlaceholder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .profileHeader {
@@ -44,6 +55,7 @@
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+    
 }
 
 .usernameHeader {
@@ -67,4 +79,13 @@
     width: 408px;
     align-items: flex-end;
     justify-content: space-between;
+}
+
+.cards {
+    margin-top: 20px;
+}
+
+.nav {
+    position: fixed;
+    bottom: 0;
 }
