--- a/styles/onboarding3.module.css
+++ b/styles/onboarding3.module.css
@@ -98,10 +98,10 @@
 }
 
 .character {
-    position: absolute;
-    top: 340px;
-    right: -9px;
-    z-index: 4;
+    width: 250px;
+    height: 250px;
+    z-index: 3;
+    margin-bottom: -30px;
 }
 
 .blackBG h2 {
@@ -184,4 +184,13 @@
     height: 11px;
     border-radius: 10px;
     background: #D9D9D9;
+}
+
+.borderTest {
+    position: fixed;
+    z-index: 3;
+    bottom: 0;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: end;
 }
