--- a/styles/team.module.css
+++ b/styles/team.module.css
@@ -13,12 +13,22 @@
     src: url('/fonts/Lexend-SemiBold.ttf');
 }
 
+.parentContainer {
+    height: 100vh;
+    width: 430px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--background-black);
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .main {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: var(--background-black);
-    height: 932px;
 }
 
 .backbuttonLink {
@@ -48,11 +58,9 @@
 .nameHeader {
     font-family: 'Lexend Bold';
     font-weight: 600;
-    margin-bottom: 6px;
 }
 
 .character {
-    background-color: red;
     margin-right: 13px;
     width: 92px;
     height: 92px;
@@ -68,81 +76,49 @@
 .descriptionContainer {
     display: flex;
     flex-direction: column;
-    margin-top: 58px;
+    margin: auto;
+    margin-top: 70px;
+    margin-bottom: 160px;
+    height: 30%;
+    width: 400px;
+}
+
+.placeholder1, .placeholder2, .placeholder3, .placeholder4 {
+    width: 110px !important;
+    height: 110px !important;
+    border-radius: 14px;
+    border: 4px solid var(--groovy-purple);
+    object-fit: cover;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    overflow: hidden;
 }
 
 .placeholder1 {
-    width: 139px;
-    height: 139px;
-    border-radius: 14px;
-    border: 4px solid var(--groovy-purple);
-    transform: rotate(-6.33deg);
-    position: absolute;
-    top: 664.31px;
-    left: 10px;
-    object-fit: cover;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
+    transform: translateY(-10px) rotate(-6.33deg) translateX(15px);
 }
 
 .placeholder2 {
-    width: 139px;
-    height: 139px;
-    border-radius: 14px;
-    border: 4px solid var(--groovy-purple);
-    transform: rotate(13.32deg);
-    z-index: 2;
-    position: absolute;
-    top: 726.98px;
-    left: 89.02px;
-    object-fit: cover;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
+    transform: translateY(40px) rotate(13.32deg);
+    z-index: 2; /* Ensures it overlays appropriately if needed */
 }
 
 .placeholder3 {
-    width: 139px;
-    height: 139px;
-    border-radius: 14px;
-    border: 4px solid var(--groovy-purple);
-    transform: rotate(10deg);
-    position: absolute;
-    top: 664.31px;
-    left: 224.68px;
-    object-fit: cover;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
+    transform: translateY(-10px) rotate(10deg);
 }
 
 .placeholder4 {
-    position: absolute;
-    width: 139px;
-    height: 139px;
-    border: 4px solid var(--groovy-purple);
-    border-radius: 14px;
-    transform: rotate(349deg);
+    transform: translateY(40px) rotate(349deg) translateX(-15px);
     z-index: 2;
-    top: 749.19px;
-    left: 271px;
-    object-fit: cover;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
 }
 
 .photosContainer {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
+    width: 100%;
 }
