--- a/styles/ParentOne.module.css
+++ b/styles/ParentOne.module.css
@@ -1,5 +1,5 @@
 .title h1 {
-    font-family: 'PP Monument Extended Light';
+    font-family: 'PP Monument Extended Regular';
     color: var(--groovy-white);
     padding-top: 30px;
     font-size: 40px;
