--- a/styles/ChildTwo.module.css
+++ b/styles/ChildTwo.module.css
@@ -9,6 +9,7 @@
 
 .result h3 {
     text-align: center;
+    font-size: var(--lexend-subheader);
     margin-bottom: -145px;
     margin-top: -30px;
 }
@@ -55,6 +56,7 @@
     border: #242527;
     border-radius: 26px;
     font-family: 'Lexend';
+    font-size: var(--lexend-body);
     color: white;
     margin-top: 20px;
 }
