--- a/styles/ChildTwo.module.css
+++ b/styles/ChildTwo.module.css
@@ -67,7 +67,7 @@
 
 .groove {
     margin-top: 30px;
-    font-family: 'PP Monument Extended Light';
+    font-family: 'PP Monument Extended Regular';
     font-size: 17px;
     text-align: center;
 }
